# pr-pilot

./: .env.example  .gitignore  AGENTS.md  CLAIMS-AUDIT.md  Dockerfile  LAUNCH_PLAN.md  LICENSE  NARRATIVE.md  README.md  cloudbuild.yaml  index.html  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  pr-pilot.yml  smoke-test.yml
assets/: architecture.html
docs/: ARCHITECTURE.md  OUTREACH.md  SUBMISSION.md
landing/: index.html
src/: __init__.py  cli.py  cloud_logging.py  config.py  dashboard.html  main.py  review_poster.py  stripe_handler.py
src/agents/: __init__.py  base.py  escalator.py  fixer.py  reviewer.py  tester.py  verifier.py
src/github_app/: __init__.py  client.py  idempotency.py  webhook.py
src/orchestration/: __init__.py  engine.py
tests/: __init__.py  test_agents.py  test_chain_integration.py  test_client_dedup.py  test_operational_gaps.py  test_review_poster.py  test_sample.py  test_stripe_handler.py  test_webhook_safety.py
