[project]
name = "pr-pilot"
version = "0.1.0"
description = "AI-native code quality service — 5-agent autonomous PR review pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "tenacity>=8.0",
    "stripe>=9.0",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
